improving UI, add rename and player info (not stable) function, pokemons list sorted by PokemonNumber by default

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,7 @@ build/externalLibs
 build/package
 build/project
 build/projectRefs
-
+bin/.gitignore
+build/build
+*~*
 !PokeGOAPI-library-all-0.4.0.jar
